--- a/fiap-17mob-project/www/index.html
+++ b/fiap-17mob-project/www/index.html
@@ -37,12 +37,13 @@
     </head>
     <body>
         <div class="app">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">FIAP</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <a class="navbar-brand" href="#">FIAP</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -51,16 +52,16 @@
                                 <a class="nav-link" href="profile.html">Perfil</a>
                             </li>
                             <li class="nav-item">
-                                    <a class="nav-link" href="#">Sair</a>
+                                    <form id='sair'><a class="nav-link" href="#">Sair</a></form>
                             </li>
                         </ul>
                     </div>
-            </nav>
+                </nav>
             <section id="home" style="text-align: center;">
 
                 <div id="pokemons"></div>
 
-                <a href="#" id="logout">Sair</a>
+                <form id='sair'><a href="#" id="logout">Sair</a></form>
                 
             </section>
 
