--- a/fiap-17mob-project/www/profile.html
+++ b/fiap-17mob-project/www/profile.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="profile.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#">Sair</a>
+                                <form id='sair'><a class="nav-link" href="#">Sair</a></form>
                         </li>
                     </ul>
                 </div>
