--- a/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
+++ b/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="profile.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                                <form id='sair'><a class="nav-link" href="#">Sair</a></form>
+                                <form id="sair" type="submit"><a class="nav-link" href="#">Sair</a></form>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +35,9 @@
                 <br>
                 <div style="text-align: center;">
                     <br/><br/>
-                    <img src="https://placehold.it/100x100" alt=""/>
+                    <img id="image" src="https://placehold.it/100x100" alt=""/>
+                    <br/><br/>
+                    <button id="photo" type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
                     <br/><br/>
                 </div>
                 <form id="createuser" style="text-align: center;" >
@@ -59,6 +61,7 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/firebase.js"></script>
         <script type="text/javascript" src="js/signup.js"></script>
-        
+        <script type="text/javascript" src="js/logout.js"></script>
+        <script type="text/javascript" src="js/camera.js"></script>
     </body>
 </html>
