--- a/fiap-17mob-project/www/home.html
+++ b/fiap-17mob-project/www/home.html
@@ -52,7 +52,7 @@
                                 <a class="nav-link" href="profile.html">Perfil</a>
                             </li>
                             <li class="nav-item">
-                                    <form id='sair'><a class="nav-link" href="#">Sair</a></form>
+                                    <form id="sair"><a class="nav-link" href="#">Sair</a></form>
                             </li>
                         </ul>
                     </div>
@@ -61,7 +61,7 @@
 
                 <div id="pokemons"></div>
 
-                <form id='sair'><a href="#" id="logout">Sair</a></form>
+                <form id="sair"><a href="#" id="logout">Sair</a></form>
                 
             </section>
 
@@ -77,7 +77,7 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/firebase.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-
+        <script type="text/javascript" src="js/logout.js"></script>
         
     </body>
 </html>
