--- a/fiap-17mob-project/www/profile.html
+++ b/fiap-17mob-project/www/profile.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="profile.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                                <form id='sair'><a class="nav-link" href="#">Sair</a></form>
+                                <form id="sair"><a class="nav-link" href="#">Sair</a></form>
                         </li>
                     </ul>
                 </div>
@@ -61,6 +61,7 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/firebase.js"></script>
         <script type="text/javascript" src="js/signup.js"></script>
+        <script type="text/javascript" src="js/logout.js"></script>
         
     </body>
 </html>
