--- a/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
+++ b/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
@@ -63,5 +63,6 @@
         <script type="text/javascript" src="js/signup.js"></script>
         <script type="text/javascript" src="js/logout.js"></script>
         <script type="text/javascript" src="js/camera.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
     </body>
 </html>
