--- a/fiap-17mob-project/www/profile.html
+++ b/fiap-17mob-project/www/profile.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="profile.html">Perfil</a>
                         </li>
                         <li class="nav-item">
-                                <form id="sair"><a class="nav-link" href="#">Sair</a></form>
+                                <form id="sair" type="submit"><a class="nav-link" href="#">Sair</a></form>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
                     <br/><br/>
                     <img id="image" src="https://placehold.it/100x100" alt=""/>
                     <br/><br/>
-                    <button type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
+                    <button id="photo" type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
                     <br/><br/>
                 </div>
                 <form id="createuser" style="text-align: center;" >
@@ -62,6 +62,7 @@
         <script type="text/javascript" src="js/firebase.js"></script>
         <script type="text/javascript" src="js/signup.js"></script>
         <script type="text/javascript" src="js/logout.js"></script>
-        
+        <script type="text/javascript" src="js/camera.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
     </body>
 </html>
