--- a/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
+++ b/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
@@ -37,7 +37,7 @@
                     <br/><br/>
                     <img id="image" src="https://placehold.it/100x100" alt=""/>
                     <br/><br/>
-                    <button id="photo" type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
+                    <button id="takephoto" type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
                     <br/><br/>
                 </div>
                 <form id="createuser" style="text-align: center;" >
