--- a/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
+++ b/fiap-17mob-project/platforms/android/app/src/main/assets/www/profile.html
@@ -37,7 +37,9 @@
                     <br/><br/>
                     <img id="image" src="https://placehold.it/100x100" alt=""/>
                     <br/><br/>
-                    <button id="takephoto" type="submit" class="btn btn-primary btn-block">Carregar Foto</button>
+                    <button id="takephoto" type="submit" class="btn btn-primary btn-block">Camera</button>
+                    <br/>
+                    <button id="gallery" type="submit" class="btn btn-primary btn-block">Galeria</button>
                     <br/><br/>
                 </div>
                 <form id="createuser" style="text-align: center;" >
@@ -58,12 +60,12 @@
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/camera.js"></script>
+        <script type="text/javascript" src="cordova_plugins.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/firebase.js"></script>
-        <script type="text/javascript" src="js/signup.js"></script>
         <script type="text/javascript" src="js/logout.js"></script>
-        <script type="text/javascript" src="js/camera.js"></script>
         
     </body>
 </html>
