--- a/fiap-17mob-project/www/profile.html
+++ b/fiap-17mob-project/www/profile.html
@@ -35,7 +35,7 @@
                 <br>
                 <div style="text-align: center;">
                     <br/><br/>
-                    <img id="image" src="https://placehold.it/100x100" alt=""/>
+                    <img id="image" height="200" width="150" src="https://placehold.it/100x100" alt=""/>
                     <br/><br/>
                     <button id="takephoto" type="submit" class="btn btn-primary btn-block">Camera</button>
                     <br/>
